--- a/css/index.styl
+++ b/css/index.styl
@@ -235,8 +235,12 @@ html,body
           font-size: 12px
           font-weight: 700
           text-shadow: none
-    .time
-      font-size: 12px
+    .times
+      overflow-y: hidden
+      .time
+        font-size: 12px
+        span
+          color: black
     .score
       font-size: 12px
       color: white
