--- a/css/index.styl
+++ b/css/index.styl
@@ -12,43 +12,34 @@ $tb-button-text-shadow = #003a54
 $tb-bottom-border = #F1F1EF
 $tb-input-bg = white 
 
+$site-width = 1000px
+
 @import '../node_modules/zooniverse/css/top_bar'
 @import '../node_modules/zooniverse/css/login_forms'
 @import './bubble'
 
+::selection
+  background: #0089c8
 
-a.button
-  color: #001d34
-  font-size: 14px
-  font-weight bold
-  text-shadow:  1px 0px  #ffffff 
-
-  text-decoration: none
-  border-box
-  display:block
-  width: 200px
-  height: 50px
-  background-color: #E5EFF5
-  border-radius: 50px
-  text-align: center
-  line-height: 50px
-  cursor : pointer
 .stack 
   > div 
     display: none
   > div.active 
     display: block
 
-.zooniverseTopBar
+.zooniverse-top-bar
   transition: top margin-top 1s ease-in-out
-  
   #zooniverse-top-bar-button
     left: 100px
+
+#app
+  margin: 0 auto
+  width: 1000px
 
 
 .homeController
   color: #ffffff
-  text-shadow: 1px 1px #0089c8
+  text-shadow: 0 1px 0 #0089c8
   padding-top:100px
   h1 
     font-size: 30px 
@@ -76,64 +67,85 @@ a.button
       vertical-align: middle
     p
       font-weight: bold
+
   .right
-    display:inline-block
+    display: inline-block
     vertical-align: middle
-    width: 590px
+    width: 540px
+
     h1
-      margin-bottom: 30px
+      margin: 0 0 30px 0
+
     p
-      font-weight: 400
+      font-size: 16px
+      font-weight: 500
+      line-height: 1.5em
       margin-bottom: 40px
-    a.button
-      
-      width: 200px
-      height: 50px
-      border-radius: 50px
-      line-height: 50px
+
 .stack
-  width: 1000px
-  margin-left:auto
-  margin-right: auto
+  margin: 0 auto
   height: 100%
+  width: 1000px
+
 ul
   list-style: none 
+  margin: 0px
   padding: 0px
-  margin: 0px
 
-html,body 
-  background-color : #08BDF9
+html, body 
+  margin: 0px
   padding: 0px 
-  margin: 0px
-  font-family : helvetica
 
-.navBar
-  color :white 
-  margin-top: 28px 
-  font-size: 15px
-  text-shadow: 1px 0px #333
+body
+  background: #01bbff
+  font-family: "Helvetica Neue, Helvetica", Arial, sans-serif
+
+  > .background
+    background: url(images/background.png) center
+    height: 720px
+    left: calc(50% \- ($site-width / 2))
+    left: -webkit-calc(50% \- ($site-width / 2))
+    margin: 0 auto
+    position: absolute
+    top: 0
+    width: $site-width
+    z-index: -1
+
+#app > header
+  color: white
+  font-size: 12px
+  font-weight: 700
+  margin-top: 80px
+  text-shadow: 0 1px 0 rgba(#000, 0.6)
+
+  .logo
+    float: left
+    padding: 8px
+
   ul
-    width: 1000px 
-    margin-left:auto 
-    margin-right:auto
+    margin: 0 auto
     text-align: right
+    width: 1000px
+
     li
-      display: inline-block
-      vertical-align: top
-      cursor: pointer
-      border-box()
-      width: 100px 
-      height: 30px
       border-radius: 30px
-      text-align: center
+      box-sizing: border-box
+      display: inline-block
+      cursor: pointer
+      height: 30px
       line-height: 30px
+      text-align: center
+      vertical-align: top
+      width: 100px
+
       &.active 
         background-color: #0383AF
-      a 
-        font-size: 15px
-        text-shadow: 1px 0px #333
-        color: white
+
+      a
+        color: #fff
+        display: block
         text-decoration: none
+
     &.selected 
       background-color: #0384B0
 
@@ -152,6 +164,7 @@ html,body
     display: inline-block
     vertical-align: top_bar
     position: relative
+
     .videoContainer
       position: absolute
       top: 0px
@@ -174,20 +187,22 @@ html,body
       position: absolute
       top: 0px
       left: 0px
+
   .right
     color: white
-    text-shadow: 1px 1px #333
-    width: 360px
     display: inline-block
+    text-shadow: 1px 1px #333
     vertical-align: top
+    width: 360px
 
     a.button
-      width: 100%
+      border: 1px solid #00b1f3
+      border-radius: 50x
       height: 50px
-      border-radius: 50px
       line-height: 50px
-      margin-top: 20px
-      margin-bottom: 20px
+      margin: 20px 0
+      width: 100%
+
     .prompt 
       text-shadow: none
       font-size: 22px
