--- a/css/bubble.styl
+++ b/css/bubble.styl
@@ -1,25 +1,21 @@
 .bubble 
-{
-position: relative;
-width: 360px;
-height: 100px;
-padding: 0px;
-background: #EBF2F7;
--webkit-border-radius: 0px;
--moz-border-radius: 0px;
-border-radius: 0px;
-}
+  position: relative
+  width: 360px
+  height: 100px
+  padding: 0px
+  background: #EBF2F7
+  -webkit-border-radius: 0px
+  -moz-border-radius: 0px
+  border-radius: 0px
 
-.bubble:after 
-{
-content: "";
-position: absolute;
-top: 35px;
-left: -15px;
-border-style: solid;
-border-width: 15px 15px 15px 0;
-border-color: transparent #EBF2F7;
-display: block;
-width: 0;
-z-index: 1;
-}
+  &:after
+    content: ""
+    position: absolute
+    top: 35px
+    left: -15px
+    border-style: solid
+    border-width: 15px 15px 15px 0
+    border-color: transparent #EBF2F7
+    display: block
+    width: 0
+    z-index: 1
