--- a/css/mixin.styl
+++ b/css/mixin.styl
@@ -1,3 +1,7 @@
+$site-width = 1000px
+$sans-serif = "Open Sans", "Helvetica Neue", "Arial", sans-serif
+$serif = "Merriweather", "Georgia", serif
+
 .big-button
   background-color: #e5eff5
   border-radius: 50px
@@ -15,3 +19,7 @@
   text-decoration: none
   text-shadow: 0 1px 0 #fff
   width: 200px
+
+#site-container
+  margin: 0 auto
+  width: 1000px
