--- a/css/bubble.styl
+++ b/css/bubble.styl
@@ -1,21 +1,30 @@
 .bubble 
-  position: relative
-  width: 360px
-  height: 100px
-  padding: 0px
-  background: #EBF2F7
-  -webkit-border-radius: 0px
-  -moz-border-radius: 0px
+  background: #ecf3f8
   border-radius: 0px
+  box-shadow:
+    0 3px 6px 0 rgba(#000, 0.15),
+    inset 0 2px 0 0 #fff
+  box-sizing: border-box
+  color: #003143
+  font-size: 26px
+  font-weight: 700
+  height: 100px
+  padding: 17px 24px
+  position: relative
+  text-shadow: 0 1px 0 #fff
+  width: 360px
 
   &:after
-    content: ""
-    position: absolute
-    top: 35px
-    left: -15px
+    border-color: transparent #ecf3f8
     border-style: solid
     border-width: 15px 15px 15px 0
-    border-color: transparent #EBF2F7
+    content: ""
     display: block
+    left: -15px
+    position: absolute
+    top: 35px
     width: 0
     z-index: 1
+
+  p
+    margin: 0
