--- a/css/catchall.styl
+++ b/css/catchall.styl
@@ -53,7 +53,7 @@ ul
   font-size: 12px
   font-weight: 700
   margin-top: 80px
-  text-shadow: 0 1px 0 rgba(#000, 0.6)
+  text-shadow: 0 1px 1px rgba(#000, 0.5)
 
   .logo
     float: left
@@ -69,18 +69,19 @@ ul
       box-sizing: border-box
       display: inline-block
       cursor: pointer
-      height: 30px
+      height: 31px
       line-height: 30px
       text-align: center
       vertical-align: top
-      width: 100px
 
       &.active 
         background-color: #0383AF
+        box-shadow: inset 0 1px 2px 0 rgba(#000, 0.13)
 
       a
         color: #fff
         display: block
+        padding: 0 15px
         text-decoration: none
 
     &.selected 
@@ -123,52 +124,47 @@ ul
       left: 0px
 
   .right
-    color: white
+    color: #fff
     display: inline-block
-    text-shadow: 1px 1px #333
+    font-size: 13px
+    font-weight: 700
+    text-shadow: 0 1px 0 #0089c8
     vertical-align: top
     width: 360px
 
-    a.button
-      border: 1px solid #00b1f3
-      border-radius: 50x
-      height: 50px
-      line-height: 50px
-      margin: 20px 0
-      width: 100%
+    > section
+      border-top: 1px solid #0283AF
+      padding: 18px 0
 
     .prompt 
       text-shadow: none
       font-size: 22px
       box-shadow: 1px 1px solid rgba(0,0,0,0.6)
 
-    .wormSeciton  
+    .subject-info
+      padding: 15px 0px 15px 0px
       width: 100%
 
-      padding: 15px 0px 15px 0px
-      border-top: 1px solid #0283AF
-      border-bottom: 1px solid #0283AF
       img 
         display: inline-block
+        margin: 0 10px 0 0
+        padding: 0
         vertical-align: top
-        padding:0px
-        margin:0px
-        margin-right:10wpx
+
       .details
         display: inline-block
         vertical-align: top
         width: 285px
+
         h3
           padding: 0px
           margin: 0px
         p
           font-size: 12px
-          margin-top: 0px
+
     .players
-      border-top: 1px solid #0283AF 
-      border-bottom: 1px solid #0283AF 
-      height: 196px 
-      padding:  0px
+      padding: 0px
+
       .player
         display: inline-block
         vertical-align: top
@@ -184,29 +180,23 @@ ul
           font-size: 12px
           font-weight: 700
           text-shadow: none
+
     .times
       overflow-y: hidden
+
       .time
         font-size: 12px
+
         span
-          color: black
+          color: #000
+
     .score
       font-size: 12px
       color: white
       margin-left: 40px
 
-    .buttons
-      margin-top: 23px
-      button 
-        height: 30px
-        border-box()
-        border-box 1px white inset, 1px 1px solid rgba(0,0,0,0.6)
-        min-width: 100px
-        text-align: center
-        color: #003140
-        border-radius(2px)
-        background-color: #EBF2F7
-        border: none
-        cursor: pointer
-        &:last-child 
-          margin-left: 40px
+    .actions
+      padding: 22px 0 0 0
+
+      button
+        @extends #small-button
