--- a/css/mixin.styl
+++ b/css/mixin.styl
@@ -2,6 +2,15 @@ $site-width = 1000px
 $sans-serif = "Open Sans", "Helvetica Neue", "Arial", sans-serif
 $serif = "Merriweather", "Georgia", serif
 
+#clearfix
+  &:before,
+  &:after
+    content: " "
+    display: table
+
+  &:after
+      clear: both
+
 .big-button
   background-color: #e5eff5
   border-radius: 50px
@@ -19,6 +28,22 @@ $serif = "Merriweather", "Georgia", serif
   text-decoration: none
   text-shadow: 0 1px 0 #fff
   width: 200px
+
+#small-button
+  background: #ecf3f8
+  border: 0
+  border-radius: 3px
+  box-shadow:
+    0 3px 5px 0 rgba(#000, 0.15),
+    inset 0 1px 0 0 #fff
+  color: #003143
+  cursor: pointer
+  font-size: 12px
+  font-weight: 700
+  height: 30px
+  line-height: 22px
+  padding: 0 10px
+  text-shadow: 0 1px 0 #fff
 
 #site-container
   margin: 0 auto
