--- a/css/mixin.styl
+++ b/css/mixin.styl
@@ -9,7 +9,12 @@ $serif = "Merriweather", "Georgia", serif
     display: table
 
   &:after
-      clear: both
+    clear: both
+
+#semantic-list
+  list-style: none
+  margin: 0
+  padding: 0
 
 .big-button
   background-color: #e5eff5
