--- a/css/bubble.styl
+++ b/css/bubble.styl
@@ -6,6 +6,7 @@
     inset 0 2px 0 0 #fff
   box-sizing: border-box
   color: #003143
+  cursor: pointer
   font-size: 26px
   font-weight: 700
   height: 100px
