Some animation work.

--- a/css/mixin.styl
+++ b/css/mixin.styl
@@ -1,5 +1,6 @@
 $site-width = 1000px
-$sans-serif = "Open Sans", "Helvetica Neue", "Arial", sans-serif
+$footer-sans-serif = "Open Sans", "Helvetica Neue", "Arial", sans-serif
+$body-sans-serif = "Helvetica Neue, Helvetica", Arial, sans-serif
 $serif = "Merriweather", "Georgia", serif
 
 #clearfix
