--- a/css/index.styl
+++ b/css/index.styl
@@ -2,6 +2,9 @@
 @import "../node_modules/zooniverse/src/css/zooniverse"
 
 @import "./mixin"
+@import "./common"
 @import "./layout"
+@import "./scene"
+@import "./sub-page"
 @import "./bubble"
 @import "./catchall"
