--- a/css/layout.styl
+++ b/css/layout.styl
@@ -3,14 +3,22 @@
   color: #fff
   text-shadow: 0 1px 0 darken(#0089c8, 30%)
 
-html, body 
+html
+  height: 100%
+
+body
+  min-height: 100%
+  
+html, body
   margin: 0px
   padding: 0px
 
 body
   background: #01bbff url(images/bg-site.png) repeat
   border-top: 5px solid #000
-  font-family: "Helvetica Neue, Helvetica", Arial, sans-serif
+  color: #fff
+  font-family: $body-sans-serif
+  position: relative
 
   > .background
     background: url(images/background.png) center
@@ -41,7 +49,7 @@ body
       box-sizing: border-box
 
       .title
-        font-family: $sans-serif
+        font-family: $footer-sans-serif
         font-size: 19px
         font-weight: 300
         line-height: 1.5em
@@ -55,12 +63,13 @@ body
           font-weight: 700
 
 .stack
-  @extends #clearfix
 
   > div
     display: none
   > div.active
+    @extends #clearfix
     display: block
+    padding: 70px 0 0 0
 
 #app
   position: relative
