--- a/css/scene.styl
+++ b/css/scene.styl
@@ -3,13 +3,14 @@ $reset-width = 100px
 #reset
   background: none
   border: 0
-  bottom: 20px
+  bottom: 13px
   color: #fff
   cursor: pointer
   font-weight: 700
   left: calc(50% \- ($reset-width / 2))
   left: -webkit-calc(50% \- ($reset-width / 2))
   position: absolute
+  text-shadow: 0 1px 0 #0089c8
   width: $reset-width
   z-index: 1
 
@@ -88,7 +89,12 @@ $reset-width = 100px
 
     // &:nth-child(2)
 
-    // &:nth-child(3)
+    &:nth-child(3)
+      .explanation
+        position: absolute
+        text-align: center
+        top: 400px
+        width: 100%
 
     // &:nth-child(4)
 
