Better animation. Move animation to front page.

--- a/css/scene.styl
+++ b/css/scene.styl
@@ -1,11 +1,12 @@
 
-$reset-width = 100px
+$reset-width = 150px
 #reset
   background: none
   border: 0
-  bottom: 13px
+  bottom: 50px
   color: #fff
   cursor: pointer
+  font-size: 16px
   font-weight: 700
   left: calc(50% \- ($reset-width / 2))
   left: -webkit-calc(50% \- ($reset-width / 2))
@@ -17,9 +18,7 @@ $reset-width = 100px
 .stack > .scene
   height: 500px
   left: 0
-  padding: 0 !important
-  position: fixed
-  top: 150px
+  top: 100px
   width: 100%
 
   .sections
@@ -29,7 +28,6 @@ $reset-width = 100px
   h1 
     font-size: 30px 
     font-weight: 700
-    margin: 0 0 30px 0
 
   h3 
     font-size: 22px
@@ -61,7 +59,7 @@ $reset-width = 100px
 
     .right
       left: 420px
-      top: 140px
+      top: 71px
       width: 540px
 
       p
