--- a/css/catchall.styl
+++ b/css/catchall.styl
@@ -1,50 +1,3 @@
-.homeController
-  color: #ffffff
-  text-shadow: 0 1px 0 #0089c8
-  padding-top:100px
-
-  h1 
-    font-size: 30px 
-    font-weight: bold 
-  h3 
-    font-size: 22px
-    font-weight: bold
-  p
-    font-size: 14px
-
-  .left
-    display:inline-block
-    vertical-align: middle
-    width: 400px
-    text-align: center
-    position: relative
-
-    .details
-      display: inline-block
-      vertical-align: middle
-      width: 80px
-      margin-right: 30px
-      text-align: right
-    img 
-      display:inline-block
-      vertical-align: middle
-    p
-      font-weight: bold
-
-  .right
-    display: inline-block
-    vertical-align: middle
-    width: 540px
-
-    h1
-      margin: 0 0 30px 0
-
-    p
-      font-size: 16px
-      font-weight: 700
-      line-height: 1.5em
-      margin-bottom: 40px
-
 #app > header
   color: white
   font-size: 12px
@@ -111,7 +64,7 @@
         width: 100%
         z-index: 1
 
-      video 
+      video, object
         width: 575px
         height: 432px
       
