Reorganized some CSS

--- a/css/index.styl
+++ b/css/index.styl
@@ -5,6 +5,5 @@
 @import "./common"
 @import "./layout"
 @import "./scene"
+@import "./classifier"
 @import "./sub-page"
-@import "./bubble"
-@import "./catchall"
