--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -1,43 +1,4 @@
-#app > header
-  color: white
-  font-size: 12px
-  font-weight: 700
-  margin-top: 80px
-  text-shadow: 0 1px 1px rgba(#000, 0.5)
-
-  .logo
-    float: left
-    padding: 8px
-
-  ul
-    margin: 0 auto
-    text-align: right
-    width: 1000px
-
-    li
-      border-radius: 30px
-      box-sizing: border-box
-      display: inline-block
-      cursor: pointer
-      height: 31px
-      line-height: 30px
-      text-align: center
-      vertical-align: top
-
-      &.active 
-        background-color: #0383AF
-        box-shadow: inset 0 1px 2px 0 rgba(#000, 0.13)
-
-      a
-        color: #fff
-        display: block
-        padding: 0 15px
-        text-decoration: none
-
-    &.selected 
-      background-color: #0384B0
-
-.peerClassifier
+.stack > .classifier
 
   .left 
     width: 575px
@@ -67,7 +28,20 @@
       video, object
         width: 575px
         height: 432px
-      
+
+      .vjs-control
+        display: none
+
+      .vjs-controls
+        padding: 10px 0 0 0
+
+      .vjs-time-divider, .vjs-duration, .vjs-current-time
+        display: block
+        float: left
+        font-size: 16px
+        font-weight: 700
+        margin: 0 5px 0 0
+
     .countdown
       width: 575px
       height: 432px
@@ -124,7 +98,7 @@
       .player
         box-sizing: border-box
         float: left
-        height: 210px
+        height: 204px
         overflow: hidden
         margin: 0
         padding: 10px
@@ -167,7 +141,7 @@
           text-shadow: 0 1px 0 rgba(#fff, 0.7)
 
     .actions
-      padding: 22px 0 0 0
+      padding: 14px 0 0 0
 
       button
         @extends #small-button
@@ -175,3 +149,35 @@
         &.disabled
           cursor: default
           opacity: 0.5
+
+  .bubble 
+    background: #ecf3f8
+    border-radius: 0px
+    box-shadow:
+      0 3px 6px 0 rgba(#000, 0.15),
+      inset 0 2px 0 0 #fff
+    box-sizing: border-box
+    color: #003143
+    cursor: pointer
+    font-size: 26px
+    font-weight: 700
+    height: 100px
+    padding: 17px 24px
+    position: relative
+    text-shadow: 0 1px 0 #fff
+    width: 360px
+
+    &:after
+      border-color: transparent #ecf3f8
+      border-style: solid
+      border-width: 15px 15px 15px 0
+      content: ""
+      display: block
+      left: -15px
+      position: absolute
+      top: 35px
+      width: 0
+      z-index: 1
+
+    p
+      margin: 0
