--- a/css/layout.styl
+++ b/css/layout.styl
@@ -77,3 +77,43 @@ body
   z-index: 1
   > header, > .stack
     @extends #site-container
+
+#app > header
+  color: white
+  font-size: 12px
+  font-weight: 700
+  margin-top: 80px
+  text-shadow: 0 1px 1px rgba(#000, 0.5)
+
+  .logo
+    float: left
+    padding: 8px
+
+  ul
+    margin: 0 auto
+    text-align: right
+    width: 1000px
+
+    li
+      border-radius: 30px
+      box-sizing: border-box
+      display: inline-block
+      cursor: pointer
+      height: 31px
+      line-height: 30px
+      text-align: center
+      vertical-align: top
+
+      &.active 
+        background-color: #0383AF
+        box-shadow: inset 0 1px 2px 0 rgba(#000, 0.13)
+
+      a
+        color: #fff
+        display: block
+        padding: 0 15px
+        text-decoration: none
+
+    &.selected 
+      background-color: #0384B0
+
