First pass at site content.

--- a/css/sub-page.styl
+++ b/css/sub-page.styl
@@ -1,12 +1,28 @@
 .stack > .sub-page
+  padding-bottom: 70px
+  
+  figure
+    left: -33%
+    max-width: 20%
+    position: absolute
+    top: -0.75em
+
+    img
+      box-shadow: 0 0 10px 1px rgba(#000, 0.3)
+      max-width: 100%
 
   h1 
     font-size: 30px 
     font-weight: bold 
 
   h3 
-    font-size: 22px
+    font-size: 18px
     font-weight: bold
+
+  section
+    padding: 0 0 20px 0
+    min-height: 150px
+    position: relative
 
   > div
       box-sizing: border-box
