--- a/css/common.styl
+++ b/css/common.styl
@@ -10,14 +10,12 @@ p
   font-size: 14px
   font-weight: 700
   line-height: 1.45em
+  margin: 0.2em 0 1.3em 0
   text-shadow: 0 1px 0 #0089c8
 
   &:first-of-type
     margin: 0.2em 0 1em 0
 
-h1
-  margin: 1em 0 0.2em 0
-  text-shadow: 0 1px 0 #0089c8
-
-h2
+h1, h2, h3
+  margin: 1.2em 0 0.2em 0
   text-shadow: 0 1px 0 #0089c8
