--- a/css/layout.styl
+++ b/css/layout.styl
@@ -70,7 +70,7 @@ body
   > div.active
     @extends #clearfix
     display: block
-    padding: 70px 0 0 0
+    padding: 70px 0
 
 #app
   position: relative
