--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -91,6 +91,9 @@
           padding: 0px
           margin: 0px
 
+        p
+          font-size: 0.9em
+
     .players
       @extends #clearfix
       padding: 0
@@ -159,7 +162,7 @@
     box-sizing: border-box
     color: #003143
     cursor: pointer
-    font-size: 26px
+    font-size: 24px
     font-weight: 700
     height: 100px
     padding: 17px 24px
