--- a/css/layout.styl
+++ b/css/layout.styl
@@ -85,6 +85,15 @@ body
   margin-top: 80px
   text-shadow: 0 1px 1px rgba(#000, 0.5)
 
+  a.wordmark
+    float: left 
+    font-size: 20px
+    text-transform: uppercase 
+    color:white 
+    text-decoration: none
+    :hover 
+      text-decoration: none
+
   .logo
     float: left
     padding: 8px
