weird stylus issues

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -153,9 +153,7 @@
   .bubble 
     background: #ecf3f8
     border-radius: 0px
-    box-shadow:
-      0 3px 6px 0 rgba(#000, 0.15),
-      inset 0 2px 0 0 #fff
+    box-shadow: 0 3px 6px 0 rgba(#000, 0.15), inset 0 2px 0 0 #fff
     box-sizing: border-box
     color: #003143
     cursor: pointer
