--- a/css/mixin.styl
+++ b/css/mixin.styl
@@ -20,9 +20,7 @@ $serif = "Merriweather", "Georgia", serif
 .big-button
   background-color: #e5eff5
   border-radius: 50px
-  box-shadow:
-    0 3px 5px 0 rgba(#000, 0.15),
-    inset 0 2px 0 0 #fff
+  box-shadow: 0 3px 5px 0 rgba(#000, 0.15), inset 0 2px 0 0 #fff
   box-sizing: border-box
   color: #001d34
   display: block
@@ -39,9 +37,7 @@ $serif = "Merriweather", "Georgia", serif
   background: #ecf3f8
   border: 0
   border-radius: 3px
-  box-shadow:
-    0 3px 5px 0 rgba(#000, 0.15),
-    inset 0 1px 0 0 #fff
+  box-shadow: 0 3px 5px 0 rgba(#000, 0.15), inset 0 1px 0 0 #fff
   color: #003143
   cursor: pointer
   font-size: 12px
