Cleanup video player after classification. Closes #10

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -33,6 +33,7 @@
         display: none
 
       .vjs-controls
+        display: none
         padding: 10px 0 0 0
 
       .vjs-time-divider, .vjs-duration, .vjs-current-time
