Different home page. Added top bar images.

--- a/css/index.styl
+++ b/css/index.styl
@@ -1,9 +1,9 @@
-@import "../node_modules/nib/lib/nib/"
-@import "../node_modules/zooniverse/src/css/zooniverse"
+@import "node_modules/nib/lib/nib/"
+@import "node_modules/zooniverse/src/css/zooniverse"
 
 @import "./mixin"
 @import "./common"
 @import "./layout"
-@import "./scene"
+@import "./slider"
 @import "./classifier"
 @import "./sub-page"
