Added buttons to manually control slider.

--- a/css/slider.styl
+++ b/css/slider.styl
@@ -24,18 +24,35 @@ $slider-height = 500px
   top: 100px
   width: 100%
 
-  .container
-    @extends #site-container
-    position: relative
+  > #back, > #forward
+    appearance: none
+    background: none
+    background-position: center
+    background-repeat: no-repeat
+    border: 0
+    color: #fff
+    height: $slider-height
+    opacity: 0.35
+    position: absolute
+    transition: all 0.2s ease-in-out
+    top: 0
+    width: 100px
+    z-index: 1
+
+    &:hover
+      opacity: 0.8
+
+  > #back
+    background-image: url("images/arrow-left.png")
+    left: 0
+
+  > #forward
+    background-image: url("images/arrow-right.png")
+    right: 0
 
   .section-container
-    @extends #clearfix
-    @extends #site-container
     height: $slider-height
-    overflow: hidden
     position: relative
-    transition: all 700ms cubic-bezier(0.550, 0.085, 0.830, 0.280)
-    width: 100%
 
   h1 
     font-size: 30px 
@@ -50,11 +67,10 @@ $slider-height = 500px
   section
     float: left
     height: $slider-height
-    position: relative
-    width: 100%
 
     .container
-      display: none
+      @extends #site-container
+      position: relative
 
     .left, .right
       position: absolute
@@ -97,8 +113,12 @@ $slider-height = 500px
       &.worm
         left: 165px
 
+  .sponsors-container
+    @extends #site-container
+    position: relative
+
   .sponsors
-    bottom: 50px
+    bottom: 90px
     left: 42%
     position: absolute
 
