--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -149,6 +149,7 @@
 
       button
         @extends #small-button
+        transition: all 0.3s ease-in-out
 
         &.disabled
           cursor: default
