Begin adding tutorial.

--- a/css/index.styl
+++ b/css/index.styl
@@ -1,8 +1,10 @@
 @import "node_modules/nib/lib/nib/"
 @import "node_modules/zooniverse/src/css/zooniverse"
+@import "node_modules/zootorial/src/css/zootorial"
 
 @import "./common"
 @import "./layout"
+@import "./tutorial"
 @import "./slider"
 @import "./classifier"
 @import "./sub-page"
