--- a/css/layout.styl
+++ b/css/layout.styl
@@ -68,6 +68,8 @@ body
   > div
     @extends #site-container
     display: none
+    position: relative
+    
   > div.active
     @extends #clearfix
     display: block
