--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -2,7 +2,7 @@
 
   .left 
     width: 575px
-    height: 432px
+    height: 447px
     padding: 0px 40px 20px 20px
     display: inline-block
     vertical-align: top_bar
@@ -44,15 +44,16 @@
         margin: 0 5px 0 0
 
     .countdown
-      width: 575px
-      height: 432px
-      z-index:1 
-      font-size: 350px
-      text-align: center 
       color: white
+      font-size: 300px
+      height: 432px
+      left: 0px
       position: absolute
       top: 0px
-      left: 0px
+      text-align: center
+      text-shadow: 0 0 10px rgba(#000, 0.5)
+      width: 575px
+      z-index: 1
 
   .right
     color: #fff
