--- a/css/tutorial.styl
+++ b/css/tutorial.styl
@@ -1,8 +1,9 @@
 .zootorial-dialog
   background: #f2f2f2
   border-radius: 3px
-  box-shadow: 0 0 15px 0 rgba(#000, 0.5)
+  box-shadow: 0 0 25px 1px rgba(#000, 0.5)
   display: none
+  max-width: 320px
 
   button[name="close-dialog"]
     appearance: none
