--- a/css/layout.styl
+++ b/css/layout.styl
@@ -13,6 +13,9 @@ html, body
   margin: 0px
   padding: 0px
 
+img
+  border: 0
+  
 body
   background: #01bbff url(images/bg-site.png) repeat
   border-top: 5px solid #000
