--- a/css/layout.styl
+++ b/css/layout.styl
@@ -34,7 +34,7 @@ body
     width: $site-width
     z-index: -1
 
-  > footer
+  > .footer
     background: #16c0ff url(images/bg-footer.png) repeat
     border-top: 1px solid #00b5f8
     border-bottom: 22px solid #000
@@ -82,7 +82,7 @@ body
   position: relative
   z-index: 1
 
-#app > header
+#app > .header
   @extends #site-container
   color: white
   font-size: 12px
