--- a/css/sub-page.styl
+++ b/css/sub-page.styl
@@ -19,7 +19,7 @@
     font-size: 18px
     font-weight: bold
 
-  section
+  div.section
     padding: 0 0 20px 0
     min-height: 150px
     position: relative
