--- a/css/tutorial.styl
+++ b/css/tutorial.styl
@@ -24,3 +24,11 @@
     .header
       font-size: 15px
       font-weight: 700
+
+.zootorial-focuser
+  background: #000
+  opacity: 0.55
+
+.zootorial-blocker
+  background: #000
+  opacity: 0.2
