--- a/css/layout.styl
+++ b/css/layout.styl
@@ -18,7 +18,6 @@ img
   
 body
   background: #01bbff url(images/bg-site.png) repeat
-  border-top: 5px solid #000
   color: #fff
   font-family: $body-sans-serif
   position: relative
@@ -79,6 +78,8 @@ body
     padding: 50px 0 70px 0
 
 #app
+  border-top: 5px solid #000
+  padding-top: 80px
   position: relative
   z-index: 1
 
@@ -87,7 +88,6 @@ body
   color: white
   font-size: 12px
   font-weight: 700
-  margin-top: 80px
   text-shadow: 0 1px 1px rgba(#000, 0.5)
 
   .logo
