Adjust homepage a bit.

--- a/css/slider.styl
+++ b/css/slider.styl
@@ -112,13 +112,20 @@ $slider-height = 500px
       &.worm
         left: 165px
 
+  #classify-button
+    bottom: 250px
+    left: 44%
+    position: absolute
+
   .sponsors-container
     @extends #site-container
     position: relative
 
   .sponsors
-    bottom: 90px
+    border-top: 1px solid rgba(#fff, 0.2)
+    bottom: 79px
     left: 42%
+    padding-top: 8px
     position: absolute
 
     figure
