--- a/css/common.styl
+++ b/css/common.styl
@@ -20,11 +20,11 @@ $serif = "Merriweather", "Georgia", serif
 .big-button
   background-color: #e5eff5
   border-radius: 50px
-  box-shadow: 0 3px 5px 0 rgba(#000, 0.15), inset 0 2px 0 0 #fff
+  box-shadow: 0 2px 7px 0 rgba(#000, 0.18), inset 0 2px 5px 0 #fff
   box-sizing: border-box
   color: #001d34
   display: block
-  font-size: 14px
+  font-size: 16px
   font-weight bold
   height: 50px
   line-height: 50px
@@ -32,6 +32,10 @@ $serif = "Merriweather", "Georgia", serif
   text-decoration: none
   text-shadow: 0 1px 0 #fff
   width: 200px
+
+  &:hover
+    background-color: #fff
+    text-decoration: none
 
 #small-button
   background: #ecf3f8
@@ -53,7 +57,7 @@ $serif = "Merriweather", "Georgia", serif
 
 
 a
-  color: #ffa
+  color: #ff6
   text-decoration: none
 
   &:hover
