New tutorial subject.

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -8,8 +8,6 @@
     vertical-align: top_bar
     position: relative
 
-
-
     .videoContainer
       position: relative
       width: 575px
@@ -18,7 +16,7 @@
       z-index: 0
 
       .video-border
-        border: 8px solid #000
+        border: 9px solid #000
         box-shadow: inset 0 0 10px 1px rgba(#000, 0.7)
         box-sizing: border-box
         height: 100%
@@ -45,9 +43,9 @@
         display: none
 
       .vjs-controls
-        bottom: 11px
+        bottom: 13px
         display: none
-        left: 14px
+        left: 16px
         padding: 10px 0 0 0
         position: absolute
 
@@ -62,9 +60,9 @@
       color: white
       font-size: 300px
       height: 432px
-      left: 0px
+      left: 0
       position: absolute
-      top: 0px
+      top: 40px
       text-align: center
       text-shadow: 0 0 10px rgba(#000, 0.5)
       width: 575px
@@ -145,6 +143,9 @@
 
         .sign-in
           cursor: pointer
+
+          &:hover
+            text-decoration: underline
 
         p
           margin: 1px 0
