--- a/css/tutorial.styl
+++ b/css/tutorial.styl
@@ -1,29 +1,60 @@
 .zootorial-dialog
-  background: #f2f2f2
-  border-radius: 3px
-  box-shadow: 0 0 25px 1px rgba(#000, 0.5)
+  background-color: #ecf3f8
+  border: 0
+  box-shadow: inset 0 2px 0 #fff, 0 1px 15px 0 rgba(#000, 0.5)
+  box-sizing: border-box
   display: none
-  max-width: 320px
+  padding: 11px 10px 48px 15px
+  position: relative
+  width: 360px
 
   button[name="close-dialog"]
     appearance: none
-    background: #ccc
+    background: url(images/close_x.png) no-repeat top right
     border: 0
-    border-bottom: 1px solid #333
-    border-left: 1px solid #333
-    box-shadow: 0 0 2px 0 rgba(#000, 0.3)
+    color: rgba(#fff, 0)
+    cursor: pointer
     float: right
     margin: 0
 
   .dialog-content
-    box-sizing: border-box
+    color: #003143
     font-size: 13px
     line-height: 1.4em
-    padding: 9px 33px 6px 13px
+    text-shadow: 0 1px 0 #fff
 
     .header
-      font-size: 15px
+      font-family: "Helvetica Neue", sans-serif
+      font-size: 18px
       font-weight: 700
+      margin-bottom: 15px
+
+    .details
+      padding: 0 22px 0 0
+
+    .buttons
+      bottom: 10px
+      position: absolute
+      right: 10px
+
+      button
+        background: #01bbfe
+        border: 0
+        border-radius: 4px
+        box-shadow: 0 1px 0 0 #0082b1
+        color: #fff
+        font-family: "Lucida Grande", "Verdana", sans-serif
+        font-size: 14px
+        font-weight: 700
+        padding: 7px 12px
+        position: relative
+        text-shadow: 0 1px 0 #0183b1
+
+        &:active
+          background: #0196cb
+          box-shadow: 0 -1px 0 0 #0082b1
+          margin-top: 1px
+          text-shadow: 0 1px 0 #017097
 
 .zootorial-focuser
   background: #000
