Position tutorial correctly regardless of video tech used

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -26,7 +26,7 @@
     vertical-align: top_bar
     position: relative
 
-    .videoContainer
+    .video-container
       position: relative
       width: 575px
       height: 432px
