Small text change

--- a/css/index.styl
+++ b/css/index.styl
@@ -1,6 +1,6 @@
 @import "node_modules/nib/lib/nib/"
 @import "node_modules/zooniverse/src/css/zooniverse"
-@import "node_modules/zootorial/css/zootorial.css"
+@import "node_modules/zootorial/src/css/zootorial"
 
 @import "./common"
 @import "./layout"
