--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -198,7 +198,7 @@
         transition: all 0.3s ease-in-out
 
         &.disabled
-          cursor: default
+          cursor: not-allowed
           opacity: 0.5
 
   .bubble 
