--- a/css/tutorial.styl
+++ b/css/tutorial.styl
@@ -43,6 +43,7 @@
         border-radius: 4px
         box-shadow: 0 1px 0 0 #0082b1
         color: #fff
+        cursor: pointer
         font-family: "Lucida Grande", "Verdana", sans-serif
         font-size: 14px
         font-weight: 700
