Add static image at start of video.

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -85,6 +85,13 @@
         font-weight: 700
         margin: 0 5px 0 0
 
+      .vjs-poster
+        height: 100%
+        left: 0
+        position: absolute
+        top: 0
+        width: 100%
+
     .countdown
       color: white
       font-size: 300px
