--- a/css/index.styl
+++ b/css/index.styl
@@ -5,6 +5,8 @@
 @import "./common"
 @import "./layout"
 @import "./tutorial"
-@import "./slider"
 @import "./classifier"
 @import "./sub-page"
+
+@import "./slider"
+@import "./user-profile"
