Add feedback link

--- a/css/layout.styl
+++ b/css/layout.styl
@@ -112,6 +112,9 @@ body
         background-color: #0383AF
         box-shadow: inset 0 1px 2px 0 rgba(#000, 0.13)
 
+      &.feedback a
+        color: #ff6
+
       a
         color: #fff
         display: block
