--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -71,13 +71,13 @@
       .vjs-control
         display: none
 
-      .vjs-controls
+      .vjs-control-bar
         bottom: 13px
         left: 16px
         padding: 10px 0 0 0
         position: absolute
 
-        .vjs-control
+        .vjs-control-text
           display: none
 
       .vjs-time-divider, .vjs-duration, .vjs-current-time
