--- a/css/tutorial.styl
+++ b/css/tutorial.styl
@@ -57,10 +57,13 @@
           margin-top: 1px
           text-shadow: 0 1px 0 #017097
 
+.zootorial-blocker,
 .zootorial-focuser
   background: #000
+  position: absolute !important
+
+.zootorial-focuser
   opacity: 0.55
 
 .zootorial-blocker
-  background: #000
   opacity: 0.2
