Add a remove mark button

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -193,15 +193,23 @@
 
       li
         border-radius: 3px
+        margin: 1px 0
+        padding: 0 3px
         position: relative
 
         button
-          background: rgba(#000, 0.2)
-          border-radius: 2px
-          display: none
+          background: none
+          border: 0
+          color: #fff
+          cursor: pointer
+          height: 100%
+          padding: 0
           position: absolute
-          right: 0
-          top: 0
+          right: 2px
+          top: -2px
+
+        &:hover
+          background: rgba(#000, 0.15)
 
       span
         color: #000
