Add a help dialog

--- a/css/common.styl
+++ b/css/common.styl
@@ -17,6 +17,9 @@ $serif = "Merriweather", "Georgia", serif
   margin: 0
   padding: 0
 
+.float-right
+  float: right
+
 .big-button
   background-color: #e5eff5
   border-radius: 50px
@@ -54,7 +57,6 @@ $serif = "Merriweather", "Georgia", serif
 #site-container
   margin: 0 auto
   width: 1000px
-
 
 a
   color: #ff6
