--- a/css/layout.styl
+++ b/css/layout.styl
@@ -124,3 +124,16 @@ body
     &.selected 
       background-color: #0384B0
 
+.zooniverse-dialog
+
+  p
+    color: #333
+    font-weight: 400
+    text-shadow: none
+
+  button[name="close-dialog"]
+    font-size: 20px
+    position: absolute
+    right: 9px
+    top: 3px
+
