--- a/css/index.styl
+++ b/css/index.styl
@@ -1,11 +1,15 @@
-@import "node_modules/nib/lib/nib/"
-@import "node_modules/zooniverse/src/css/zooniverse"
-@import "node_modules/zootorial/src/css/zootorial"
+@import "../node_modules/zooniverse/css/top-bar.css"
+@import "../node_modules/zooniverse/css/dialog.css"
+@import "../node_modules/zooniverse/css/footer.css"
+@import "../node_modules/zooniverse/css/profile.css"
+@import "../node_modules/zootorial/zootorial.css"
+@import "../node_modules/zootorial/default-theme.css"
 
 @import "./common"
 @import "./layout"
 @import "./tutorial"
 @import "./classifier"
+@import "./video.css"
 @import "./sub-page"
 
 @import "./slider"
