Namespace custom dialog styles

--- a/css/layout.styl
+++ b/css/layout.styl
@@ -124,7 +124,10 @@ body
     &.selected 
       background-color: #0384B0
 
-.zooniverse-dialog
+.help-dialog
+
+  h1,h2,h3,h4
+    text-shadow: none
 
   p
     color: #333
