--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -83,6 +83,7 @@
         > .vjs-control-bar
           bottom: 6px
           box-sizing: border-box
+          color: #fff
           font-size: 14px
           line-height: 2.5em
           padding: 0 18px
