--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -139,9 +139,11 @@
       img 
         box-shadow: 0 1px 0 0 rgba(#60d4ff, 1)
         display: inline-block
+        height: 56px
         margin: 0 10px 0 0
         padding: 0
         vertical-align: top
+        width: 56px
 
       .details
         display: inline-block
