Add an overlay over the video to catch classification start

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -96,8 +96,9 @@
             line-height: 2.2em
 
       .overlay
-        background: rgba(#000, 0.5)
-        display: none
+        background: rgba(#000, 0.0)
+        cursor: pointer
+        display: block
         height: 100%
         position: absolute
         width: 100%
