German CSS edits

--- a/css/main.styl
+++ b/css/main.styl
@@ -3,6 +3,7 @@
 @import "../node_modules/zootorial/zootorial.css"
 
 @import "./common"
+@import "./locales"
 @import "./layout"
 @import "./tutorial"
 @import "./classifier"
