Add Recents/Favorites. Closes #23

--- a/css/user-profile.styl
+++ b/css/user-profile.styl
@@ -1,2 +1,30 @@
 .stack > .profile
   transition: all 0.2s ease-in-out
+
+  #zooniverse-default-profile
+    margin-top: 20px
+
+  .zooniverse-profile
+    button
+      background: #ddd
+      border-radius: 3px
+      border: 0
+      box-shadow: none
+      color: black
+      font-size: 14px
+      margin: 0 5px
+      outline: none
+      padding: 5px 10px
+      text-shadow: none
+
+      &.active
+        background: #fff
+
+      &:hover
+        box-shadow: 0 0 5px rgba(black, 0.5)
+
+      &:first-child
+        margin-left: 0
+
+      &:last-child
+        margin-right: 0
