--- a/css/main.styl
+++ b/css/main.styl
@@ -1,6 +1,7 @@
 @import "../node_modules/zooniverse/css/zooniverse.css"
 @import "../node_modules/zooniverse/css/profile.css"
 @import "../node_modules/zootorial/zootorial.css"
+@import "../node_modules/slide-tutorial/slide-tutorial.css"
 
 @import "./common"
 @import "./locales"
@@ -9,6 +10,7 @@
 @import "./classifier"
 @import "./video.css"
 @import "./sub-page"
+@import "./slide-tutorial"
 
 @import "./slider"
 @import "./user-profile"
