--- a/css/common.styl
+++ b/css/common.styl
@@ -3,6 +3,9 @@ $footer-sans-serif = "Open Sans", "Helvetica Neue", "Arial", sans-serif
 $body-sans-serif = "Helvetica Neue, Helvetica", Arial, sans-serif
 $serif = "Merriweather", "Georgia", serif
 
+*:focus
+  outline: none
+
 #clearfix
   &:before,
   &:after
