--- a/css/slider.styl
+++ b/css/slider.styl
@@ -37,6 +37,7 @@ $slider-height = 500px
     top: 0
     width: 100px
     z-index: 1
+    cursor: pointer
 
     &:hover
       opacity: 0.8
@@ -53,11 +54,11 @@ $slider-height = 500px
     height: $slider-height
     position: relative
 
-  h1 
-    font-size: 30px 
+  h1
+    font-size: 30px
     font-weight: 700
 
-  h3 
+  h3
     font-size: 22px
     font-weight: 700
   p
@@ -81,7 +82,7 @@ $slider-height = 500px
         left: 50px
         position: absolute
         text-align: right
-        top: 101px
+        top: 175px
         width: 90px
 
 
