--- a/css/layout.styl
+++ b/css/layout.styl
@@ -8,14 +8,14 @@ html
 
 body
   min-height: 100%
-  
+
 html, body
   margin: 0px
   padding: 0px
 
 img
   border: 0
-  
+
 body
   background: #01bbff url(images/bg-site.png) repeat
   color: #fff
@@ -36,19 +36,33 @@ body
   > .footer
     background: #16c0ff url(images/bg-footer.png) repeat
     border-top: 1px solid #00b5f8
-    border-bottom: 22px solid #000
     box-sizing: border-box
     color: #0175a0
-    height: 309px
-    padding: 47px 0 40px 0
-    position: absolute
     width: 100%
-    bottom: (-@height)
 
     > .zooniverse-footer
       @extends #site-container
-      background: url(images/zoo-logo.png) no-repeat 0 7px
       box-sizing: border-box
+      margin: 0 auto;
+      padding: 50px 10px
+
+      .zooniverse-logo-container
+        margin: 0
+        width: 100%
+        &:hover
+          transition: transform 0.8s
+          transform: rotate(720deg)
+
+        .zooniverse-logo
+          max-height: 100px
+          width: 100%
+
+      .zooniverse-footer-content
+        width: 100%
+
+        .zooniverse-footer-heading
+          margin: 30px auto
+          text-align: center
 
       .title
         font-family: $footer-sans-serif
@@ -66,12 +80,12 @@ body
 
 .stack
   position: relative
-  
+
   > div
     @extends #site-container
     display: none
     position: relative
-    
+
   > div.active
     @extends #clearfix
     display: block
@@ -108,7 +122,7 @@ body
       text-align: center
       vertical-align: top
 
-      &.active 
+      &.active
         background-color: #0383AF
         box-shadow: inset 0 1px 2px 0 rgba(#000, 0.13)
 
@@ -121,7 +135,7 @@ body
         padding: 0 15px
         text-decoration: none
 
-    &.selected 
+    &.selected
       background-color: #0384B0
 
 .help-dialog
