Updated content for #29, #33, and #34

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -45,15 +45,13 @@
       border: 2px solid black
       z-index: 0
 
-      .key-commands
-        float: left
+      .key-commands p
         color: #014e6a
         font-size: 12px
-
-        p
-          padding: 10px 20px 0 0
-          -webkit-font-smoothing: antialiased
-          font-weight: inherit
+        float: left
+        padding: 24px 20px 0 0
+        -webkit-font-smoothing: antialiased
+        font-weight: inherit
 
         .key
           border: solid 2px #014e6a
@@ -302,3 +300,30 @@
 
     p
       margin: 0
+
+  .field-guide
+    display: none
+    padding: 20px 0 0
+    margin: 20px 10px 0
+    border-top: 1px solid #0283af
+    text-align: center
+    color: #014e6a;
+
+    figure
+      display: inline-block
+
+      figcaption
+        font-size: 12px
+
+    p
+      max-width: 600px
+      width: 100%
+      margin: 1em auto
+      font-weight: 300
+
+    .scroll-up
+      font-size: 20px
+      padding: 70px 0 0
+      cursor: pointer
+
+
