--- a/css/slide-tutorial.styl
+++ b/css/slide-tutorial.styl
@@ -11,6 +11,8 @@
     transition: width .7s
     .slide-tutorial-slide-bottom
       min-height: 160px
+      p
+        font-weight: 300
     .slide-tutorial-dots
       .slide-tutorial-dot
         background: #01bbfe
