--- a/css/sub-page.styl
+++ b/css/sub-page.styl
@@ -1,28 +1,36 @@
 .stack > .sub-page
   padding-bottom: 70px
-  
+  max-width: 1000px
+  width: 100%
+
   figure
-    left: -33%
-    max-width: 20%
-    position: absolute
-    top: -0.75em
+    margin: 0 40px 0 0
+    order: 1
+    min-width: 150px
 
     img
       box-shadow: 0 0 10px 1px rgba(#000, 0.3)
-      max-width: 100%
+      width: 150px
 
-  h1 
-    font-size: 30px 
-    font-weight: bold 
+  h1
+    font-size: 30px
+    font-weight: bold
+    margin-bottom: 20px
 
-  h3 
+  h3
     font-size: 18px
     font-weight: bold
+    margin-top: 0
 
   div.section
     padding: 0 0 20px 0
     min-height: 150px
     position: relative
+    display: flex
+    justify-content: space-around
+
+    div
+      order: 2
 
   > div
       box-sizing: border-box
@@ -30,7 +38,12 @@
       vertical-align: top
 
   .left
-    width: 330px
+    // width: 330px
+    width: 39%
 
   .right
-    width: 540px
+    // width: 540px
+    width: 60%
+
+  .full-width
+    width: 99%
